assets/css/tailwind.css
@import url('//cloud.typenetwork.com/projects/6300/fontface.css');

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Trade Gothic';
  src: url(../fonts/TradeGothicLTProBdCn20.woff2) format('woff2'),
    url(../fonts/TradeGothicLTProBdCn20.woff) format('woff');
}

@layer base {
  .heading-display {
    @apply font-display font-bold tracking-tight leading-negative uppercase;
  }

  .heading-serif {
    @apply font-serif font-normal tracking-wide leading-tight uppercase;
  }

  h1,
  .heading-1 {
    @apply heading-display text-xl md:text-xxl;
  }

  h2,
  .heading-2 {
    @apply heading-display text-md md:text-xl;
  }

  h3,
  .heading-3 {
    @apply heading-display text-md md:text-lg;
  }

  h4,
  .heading-4 {
    @apply heading-display text-base md:text-md;
  }

  h5,
  .heading-5 {
    @apply heading-serif text-sm;
  }

  h6,
  .heading-6 {
    @apply heading-serif text-xs;
  }

  body,
  .body {
    @apply font-sans text-xs md:text-base tracking-normal leading-normal normal-case;
  }

  button {
    cursor: pointer;
  }
}

@layer components {
  .cta {
    min-width: 9.4375rem;
    @apply border rounded-full inline-flex justify-center items-center font-sans text-xs font-bold leading-normal px-7 py-4 text-center uppercase hover-transition;
  }

  .wide-cta {
    @apply border font-display text-base lg:text-md px-6 pt-2 w-full border font-bold hover-transition rounded-full inline-flex justify-center items-center text-center uppercase hover-transition;
  }

  .small-cta {
    @apply rounded-full inline-flex justify-center items-center px-2 py-1 font-sans text-xxs py-1 px-3;
  }

  .input {
    background: transparent;
    height: 5.5rem;
    line-height: 5.5rem;
    @apply body text-sm md:text-base px-7;
  }

  .input::placeholder {
    @apply text-navy;
  }

  .input[type='email'],
  .input[type='text'] {
    @apply border rounded-none text-navy;
  }

  .input-label {
    @apply font-sans text-base tracking-normal leading-normal mb-4 normal-case;
    @media (min-width: theme('screens.md')) {
      font-size: 1.5rem;
    }
  }

  .submit-button {
    @apply input bg-navy border border-navy text-white font-display px-5 uppercase;
  }

  .nav-item {
    @apply font-display flex items-center text-sm leading-none uppercase whitespace-nowrap w-min;
  }

  .nav-item-round {
    @apply border rounded-full flex justify-center items-center h-10 w-10;
  }
}

@layer utilities {
  .hover-transition {
    @apply transition-opacity duration-300 ease-in-out hover:opacity-50;
  }

  .visually-hidden {
    clip: rect(0 0 0 0);
    @apply hidden h-px absolute whitespace-nowrap w-px;
  }
}

